# Dxob

./: .gitignore  CMakeLists.txt  README.md  Specs.MD
src/: CMakeLists.txt  Dxob.hpp
src/Internal/: Defines.hpp  DxobByteArrayWrapper.hpp  DxobData.cpp  DxobData.hpp  DxobMemory.hpp  DxobSettings.hpp  DxobTypes.hpp
src/Internal/IO/: Reader.cpp  Reader.hpp  Writter.cpp  Writter.hpp
test/: main.cpp
